fix button alignment

--- a/website/src/styles/content.less
+++ b/website/src/styles/content.less
@@ -90,7 +90,7 @@
       .childrenWrapper {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        align-items: center;
         z-index: 1;
       }
 
